--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,11 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+
+
+### Java ###
 src/main/resources/application.properties
+.gitignore
 
 ### STS ###
 .apt_generated
